データベース周りの準備&viewの作成

--- a/resources/scss/module.scss
+++ b/resources/scss/module.scss
@@ -1,28 +1,4 @@
-$primary-tone: #f8f5f2;
-$secondary-tone: #f3f3f3;
-
-$primary-text-color: #333;
-$secondary-text-color: #8f8f8f;
-
-$amazon-color: #ffb36b;
-$rakuten-color: #ea7373;
-$yahoo-color: #51a7e8;
-$official-color: #55aba7;
-$review-color: #8f8f8f;
-
-$twitter-color: #00acee;
-$facebook-color: #3458a9;
-$hatena-color: #1da0ce;
-$line-color: #4eb667;
-
-$primary-merit: #6fc7e1;
-$secondary-merit: #f0f9fc;
-
-$primary-demerit: #ffa883;
-$secondary-demerit: #fff4f4;
-
-$alert-primary: #ea7373;
-$alert-secondary: #fff4f4;
-
-$info-primary: #eac873;
-$info-secondary: #fffff4;
+.header {
+   background-color: #ccc;
+   padding: 20px;
+}
