--- a/resources/scss/layout.scss
+++ b/resources/scss/layout.scss
@@ -1,10 +1,19 @@
 .l-content {
   width: 1024px;
   margin: 0 auto;
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    padding: 16px;
+  }
 }
 
 .l-section {
   padding: 12px 0 0;
+
+  @media screen and (max-width: 767px) {
+    padding: 16px;
+  }
 }
 
 .l-center {
