--- a/resources/scss/module.scss
+++ b/resources/scss/module.scss
@@ -1,3 +1,35 @@
+.text-bold {
+  font-weight: bold;
+}
+
+.text-xxlarge {
+  font-size: 1.4rem !important;  
+}
+
+.text-xlarge {
+  font-size: 1.2rem !important;  
+}
+
+.text-large {
+  font-size: 1.1rem !important;  
+}
+
+.text-xsmall {
+  font-size: 0.8rem !important;  
+}
+
+.text-small {
+  font-size: 0.9rem !important;  
+}
+
+.text-xsmall {
+  font-size: 0.8rem !important;  
+}
+
+.text-xxsmall {
+  font-size: 0.7rem !important;  
+}
+
 .heading-top-container {
   padding: 8px;
   background-color: #eee;
@@ -82,7 +114,6 @@
   }
 }
 
-
 .panel {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -141,7 +172,7 @@
     flex-basis: calc(49%);
     border: 1px solid #ccc;
     border-radius: 4px;
-    padding: 20px;
+    padding: 16px;
     
     &:nth-child(odd) {
       margin: 0 1% 2% 0;
@@ -179,7 +210,7 @@
       border-bottom: 1px dotted #ddd;
       display: flex;
       justify-content: space-between;
-      font-size: 1.1rem;
+      font-size: 1rem;
       line-height: 1;
 
       &:nth-child(1):before {
@@ -228,6 +259,13 @@
         text-decoration: none;
         font-size: 1.2rem;
       }
+    }
+  }
+  @media screen and (max-width: 767px) {
+    display: block;
+    
+    .priceInfo {
+      margin: 0 0  20px 0 !important;
     }
   }
 }
@@ -281,8 +319,8 @@
     .productInfo-price-text {
       padding-left: 4px;
       display: inline-block;
+      vertical-align: middle;
     }
-    
   }
 
   .productInfo-spec {
@@ -306,6 +344,24 @@
       &.is-active {
         background-color: #fff;
         color: #333;
+      }
+    }
+  }
+  @media screen and (max-width: 767px) {
+    display: block;
+    
+    .productInfo-left {
+      margin: 0 0 16px;
+    }
+    
+    .productInfo-right {
+      margin: 0 0 16px;
+    }
+    
+    .productInfo-spec {
+
+      li {
+        width: calc(33% + 2px);
       }
     }
   }
@@ -373,6 +429,93 @@
     &-right {
       width: 100%;
       padding-left: 0;
+    }
+  }
+}
+
+.panelLink {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 12px;
+  padding: 0 !important;
+  border: none !important;
+
+  li {
+    list-style-type: none;
+    padding: 0 !important;
+  }
+
+  a {
+    display: block;
+    padding: 12px 8px;
+    background-color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    color: #333;
+    position: relative;
+    line-height: 1.3;
+    border-radius: 4px;
+
+    &:after {
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      content: "\f054";
+      position: absolute;
+      top: 50%;
+      right: 10px;
+      margin-top: -10px;
+      font-size: 0.9rem;
+    }
+  }
+
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.definition {
+  border-radius: 4px;
+  border: 1px solid #ccc;
+
+  .definition-title {
+    font-weight: bold;
+    text-align: center;
+    font-size: 1rem;
+    margin: 0;
+    padding: 15px 0 15px;
+  }
+
+  .definition-body {
+
+    border-radius: 4px;
+    padding: 15px 20px;
+    margin: 0;
+
+    dt {
+      font-weight: bold;
+      margin-bottom: 8px !important;
+
+      &:before {
+        font-family: "Font Awesome 5 Free";
+        content: '\f058';
+        font-size: 0.9rem;
+        font-weight: 900;
+        margin-right: 4px;
+      }
+    }
+
+    dd {
+      border-bottom: 1px dashed #ccc;
+      color: #333;
+      font-size: 0.9rem;
+      padding-bottom: 12px;
+      margin-bottom: 12px !important;
+    }
+
+    dd:last-child {
+      margin-bottom: 0!important;
+      padding-bottom: 0!important;
+      border-bottom: none;
     }
   }
 }
